# XPlane-gRPC

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
client/: DataRefClient.cpp  DataRefClient.h
plugin/: CMakeLists.txt  DataRef.h  DataRefManager.cpp  DataRefManager.h  Plugin.cpp  Server.cpp  Server.h
plugin/protos/: DataService.proto
tests/: CMakeLists.txt  main.cpp
